--- a/main.yaml
+++ b/main.yaml
@@ -1,7 +1,11 @@
 ---
 - hosts: backend
+  vars_files:
+    - "vars/main.yaml"
   roles:
     - role:  backend
 - hosts: proxy
+  vars_files:
+    - "vars/main.yaml"
   roles:
     - role: proxy
